--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>INSERT YOUR TITLE HERE</title>
-    <meta name="description" content="INSERT YOUR SITE DESCRIPTION HERE">
+    <title>WHATS IN THE BLACK BOX</title>
+    <meta name="description" content="Inferance of whats in the box">
     <meta name="author" content="Amir Phelmetto">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <h1>Claim</h1>
-    <p>INSERT YOUR CLAIM HERE</p>
+    <p>The box has some type of bucket system or easy way to hold a lot of water and realse it randomly.</p>
     <h1> </h1>
     <p> </p>
     
