--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
+  <h1>Heading 1</h1>
   <body>
     <h1>Claim</h1>
     <p>The box has some type of bucket system or easy way to hold a lot of water and realse it randomly.</p>
