--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-      <h1>Heading 1</h1>
     <h1>Claim</h1>
     <p>The box has some type of bucket system or easy way to hold a lot of water and realse it randomly.</p>
-    <h1> </h1>
+    <h1>Eidence</h1>
     <p> </p>  
   </body>
 </html>
