--- a/index.html
+++ b/index.html
@@ -94,3 +94,10 @@ td   {color:white;}
 </table>
  </body>
 </html>
+<!DOCTYPE html>
+<html>
+<body>
+<h2>BLACK BOX PROJECT</h2>
+<img src="https://raw.githubusercontent.com/PMCBlackstar/pmc-blackstar.github.io/main/box%20projec%20picture.jpg" alt="Mountain" style="width:300px">
+</body>
+</html>
